cmd/oinit-ca: Return scopes for issuers in GET /:host call
